--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "crypto-random-string": "^3.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -23,6 +24,7 @@
     "passport-local": "^1.0.0",
     "pg": "^7.11.0",
     "request": "^2.88.0",
+    "stripe": "^7.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
