--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "startjs": "node app/bin/www",
     "start": "node app/app.js",
-    "test": "mocha tests/runner.js --exit"
+    "test": "mocha app/tests/runner.js --exit"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
