--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ cache:
   directories:
     - "node_modules"
 before_script:
-  - psql -c 'create database descartes;' -U adityapillai
+  - psql -c 'create database descartes;' -U postgres
 script:
   - npm test
