--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "startjs": "node src/bin/www",
     "start": "node src/app.js",
-    "test": "src/tests/scripts/run.sh"
+    "test": "src/tests/scripts/run.sh",
+    "test:watch": "mocha --watch ./src/tests/routes --recursive",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -31,10 +33,13 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^14.1.1",
     "supertest": "^4.0.2"
   }
 }
