--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,25 +1,32 @@
-module.exports = {
-  env: {
-    commonjs: true,
-    es6: true,
-    node: true,
-    mocha: true,
+{
+  "env": {
+    "commonjs": true,
+    "es6": true,
+    "node": true,
+    "mocha": true
   },
-  plugins: [
-    'security',
+  "plugins": [
+    "security"
   ],
-  extends: [
-    'airbnb-base',
-    'plugin:security/recommended',
+  "extends": [
+    "airbnb-base",
+    "plugin:security/recommended"
   ],
-  globals: {
-    Atomics: 'readonly',
-    SharedArrayBuffer: 'readonly',
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
   },
-  parserOptions: {
-    ecmaVersion: 2018,
+  "parserOptions": {
+    "ecmaVersion": 2018
   },
-  rules: {
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": ["src/tests/**"] }]
-  },
-};
+  "rules": {
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "src/tests/**"
+        ]
+      }
+    ]
+  }
+}
