--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   ],
   "extends": [
     "airbnb-base",
-    "plugin:security/recommended"
+    "plugin:security/recommended",
+    "prettier"
   ],
   "globals": {
     "Atomics": "readonly",
