--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "coveralls": "^3.0.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-security": "^1.4.0",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
     "supertest": "^4.0.2"
   }
 }
