--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "crypto-random-string": "^3.0.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "express-validator": "^5.3.1",
     "http-errors": "^1.7.2",
